Fixed modal image stretch in Gallary

--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -52,7 +52,6 @@
   position: relative;
   width: 70%;
   height: 70%;
-  background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
 }
